--- a/test.ipynb
+++ b/test.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +216,8 @@
     "    num_bin = header[\"BINNING\"]\n",
     "    num_sub_images = header[\"NSUBIMG\"]\n",
     "    global pre_filt\n",
-    "    pre_filt = 1\n",
-    "    # if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and pre_filt == \"b\"):\n",
-    "    if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and (not pre_filt == \"p\")):\n",
+    "    if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and pre_filt == \"b\"):\n",
+    "    # if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and (not pre_filt == \"p\")):\n",
     "        if(num_sub_images == 1):\n",
     "            bias = bias_cor(DAY)\n",
     "            bias_data = data - bias\n",
@@ -226,7 +225,7 @@
     "        # print(f\"original or bias : {data[135][129]}\")\n",
     "        flat_data = flat_cor(filt, data, num_bin, startH, startV)\n",
     "        # print(f\"flat_data : {flat_data[135][129]}\")\n",
-    "        # scattered_data = scattered_light(flat_data, filt)\n",
+    "        scattered_data = scattered_light(flat_data, filt)\n",
     "        # print(f\"scattered_data : {scattered_data[135][129]}\")\n",
     "        # result = DN2ref(filt, scattered_data)\n",
     "\n",
@@ -253,14 +252,14 @@
     "        \n",
     "\n",
     "\n",
-    "        # scattered_dir = f\"../output_preprocess/{target_dir}/scattered_correction\"\n",
-    "        # target_path = Path(scattered_dir)\n",
-    "        # target_path.mkdir(exist_ok=True)\n",
-    "        # hdu = fits.PrimaryHDU(scattered_data)\n",
-    "        # hdu.header['EXP_0']=tEXP\n",
-    "        # hdulist = fits.HDUList([hdu])\n",
-    "        # name = f\"{scattered_dir}/cor{num_sub_images}_st_{parts[1]}\"\n",
-    "        # hdulist.writeto(name, overwrite=True)\n",
+    "        scattered_dir = f\"../output_preprocess/{target_dir}/scattered_correction\"\n",
+    "        target_path = Path(scattered_dir)\n",
+    "        target_path.mkdir(exist_ok=True)\n",
+    "        hdu = fits.PrimaryHDU(scattered_data)\n",
+    "        hdu.header['EXP_0']=tEXP\n",
+    "        hdulist = fits.HDUList([hdu])\n",
+    "        name = f\"{scattered_dir}/cor{num_sub_images}_st_{parts[1]}\"\n",
+    "        hdulist.writeto(name, overwrite=True)\n",
     "        print(f\"st_{parts[1]}  done\")\n",
     "    pre_filt = filt\n",
     "    "
@@ -268,110 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/hattoriakihiro/Documents/after_graduate2/output_preprocess\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(os.getcwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "st_1035428953_v.fit  start\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-f7d6f172ab74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mimage_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*.fit'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnatural_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mpre_correction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-11-3f7ced012214>\u001b[0m in \u001b[0;36mpre_correction\u001b[0;34m(path, target_dir)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mflat_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflat_cor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_bin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstartH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstartV\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;31m# print(f\"flat_data : {flat_data[135][129]}\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mscattered_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscattered_light\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflat_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m         \u001b[0;31m# print(f\"scattered_data : {scattered_data[135][129]}\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;31m# result = DN2ref(filt, scattered_data)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-eec834d8d4ae>\u001b[0m in \u001b[0;36mscattered_light\u001b[0;34m(data, filt)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfufoc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "save_par_dir = \"output_calibration\"\n",
-    "path = Path(save_par_dir)\n",
-    "path.mkdir(exist_ok=True)\n",
-    "test_dir = \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/\"\n",
-    "save_dir = \"../output_preprocess/\"\n",
-    "path = Path(save_dir)\n",
-    "path.mkdir(exist_ok=True)\n",
-    "target_dir = \"20040517\"\n",
-    "target_path = os.path.join(save_dir, target_dir)\n",
-    "path = Path(target_path)\n",
-    "path.mkdir(exist_ok=True)\n",
-    "image_files = sorted(glob.glob(os.path.join(test_dir, target_dir, '*.fit')), key = natural_keys)\n",
-    "for i in range(len(image_files)):\n",
-    "    pre_correction(image_files[i], target_dir)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_dir = \"../../HAY_A_AMICA_3_HAYAMICA_V1_0/data/\"\n",
-    "image_files = sorted(glob.glob(os.path.join(test_dir, \"20051*\", '*.fit')), key = natural_keys)\n",
-    "for i in range(len(image_files)):\n",
-    "    print(image_files[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/m5261113/Documents/after_graduate2/preprocess'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-98c881df1d2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/m5261113/Documents/after_graduate2/preprocess\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/m5261113/Documents/after_graduate2/preprocess'"
-     ]
-    }
-   ],
-   "source": [
-    "os.chdir(\"/Users/m5261113/Documents/after_graduate2/preprocess\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -379,8 +275,70 @@
      "output_type": "stream",
      "text": [
       "['20050928', '20050917', '20050921', '20050919', '20050918', '20051005', '20050920', '20050929', '20051016', '20051011', '20051018', '20050904', '20051019', '20050903', '20051010', '20051017', '20051119', '20050914', '20051009', '20050925', '20050922', '20051006', '20050923', '20050924', '20051008', '20051030', '20050908', '20050906', '20051023', '20051024', '20051025', '20051022', '20051014', '20051013', '20050909', '20051103', '20051104', '20050829']\n",
-      "['20051005', '20051006', '20051008', '20051009', '20051010', '20051011', '20051013', '20051014', '20051016', '20051017', '20051018', '20051019', '20051022', '20051023', '20051024', '20051025', '20051030', '20051103', '20051104', '20051119']\n",
-      "['../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2558581440_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2559003068_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563511720_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563537820_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563607030_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563662167_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563670125_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563677626_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2563685143_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2566178777_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2566271576_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2566361188_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2566401631_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2572086065_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2572727016_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2572732931_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2572739419_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051119/st_2572745988_v.fit']\n"
+      "['20051014']\n",
+      "['../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332479491_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332498721_wide.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332786728_wide.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332825189_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333933003_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333935192_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333937365_x.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333939669_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333941809_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333943950_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333946008_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333948132_x.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333950223_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333953001_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333955746_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333966529_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334384682_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334386774_x.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334388930_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334391087_b.fit']\n",
+      "20051014\n",
+      "st_2458555574_b.fit  start\n",
+      "st_2458555574_b.fit  done\n",
+      "st_2458559479_v.fit  start\n",
+      "st_2458559479_v.fit  done\n",
+      "st_2458563336_w.fit  start\n",
+      "st_2458563336_w.fit  done\n",
+      "st_2458567192_p.fit  start\n",
+      "st_2458567192_p.fit  done\n",
+      "st_2458574873_v.fit  start\n",
+      "st_2458908623_b.fit  start\n",
+      "st_2458908623_b.fit  done\n",
+      "st_2458912495_v.fit  start\n",
+      "st_2458912495_v.fit  done\n",
+      "st_2458916352_w.fit  start\n",
+      "st_2458916352_w.fit  done\n",
+      "st_2458920240_p.fit  start\n",
+      "st_2458920240_p.fit  done\n",
+      "st_2458929180_v.fit  start\n",
+      "st_2459258061_b.fit  start\n",
+      "st_2459258061_b.fit  done\n",
+      "st_2459261933_v.fit  start\n",
+      "st_2459261933_v.fit  done\n",
+      "st_2459265790_w.fit  start\n",
+      "st_2459265790_w.fit  done\n",
+      "st_2459269679_p.fit  start\n",
+      "st_2459269679_p.fit  done\n",
+      "st_2459278619_v.fit  start\n",
+      "st_2459607516_b.fit  start\n",
+      "st_2459607516_b.fit  done\n",
+      "st_2459611372_v.fit  start\n",
+      "st_2459611372_v.fit  done\n",
+      "st_2459615228_w.fit  start\n",
+      "st_2459615228_w.fit  done\n",
+      "st_2459619117_p.fit  start\n",
+      "st_2459619117_p.fit  done\n",
+      "st_2459628057_v.fit  start\n",
+      "st_2460306420_b.fit  start\n",
+      "st_2460306420_b.fit  done\n",
+      "st_2460310260_v.fit  start\n",
+      "st_2460310260_v.fit  done\n",
+      "st_2460314149_w.fit  start\n",
+      "st_2460314149_w.fit  done\n",
+      "st_2460318038_p.fit  start\n",
+      "st_2460318038_p.fit  done\n",
+      "st_2460326962_v.fit  start\n",
+      "st_2461583123_v.fit  start\n",
+      "st_2461583123_v.fit  done\n",
+      "st_2461585051_b.fit  start\n",
+      "st_2461585051_b.fit  done\n",
+      "st_2461587011_w.fit  start\n",
+      "st_2461587011_w.fit  done\n",
+      "st_2461588972_p.fit  start\n",
+      "st_2461588972_p.fit  done\n",
+      "st_2461590917_b.fit  start\n",
+      "st_2461590917_b.fit  done\n",
+      "st_2461592861_v.fit  start\n",
+      "st_2461592861_v.fit  done\n",
+      "st_2461594838_w.fit  start\n",
+      "st_2461594838_w.fit  done\n",
+      "st_2461596766_p.fit  start\n",
+      "st_2461596766_p.fit  done\n"
      ]
     }
    ],
@@ -418,7 +376,7 @@
     "print(directory_list)\n",
     "need = sorted([item for item in directory_list if \"20051\" in item], key = natural_keys)\n",
     "print(need)\n",
-    "for subdir in need:\n",
+    "for subdir in directory_list:\n",
     "    image_files = sorted(glob.glob(os.path.join(base_directory, subdir, '*.fit')), key = natural_keys)\n",
     "\n",
     "print(image_files)\n",
@@ -428,6 +386,7 @@
     "    target_path = Path(target_dir)\n",
     "    target_path.mkdir(exist_ok=True)\n",
     "    image_files = sorted(glob.glob(os.path.join(base_directory, directory, '*.fit')), key = natural_keys)\n",
+    "    print(directory)\n",
     "    for f in image_files:\n",
     "        pre_correction(f, directory)\n",
     "# os.chdir(original_directory)"
@@ -1602,7 +1561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
